Fixed an issue where the page shifts to the right when there is an overlay

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -13,8 +13,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
   min-height: 100vh;
 }
 
