--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,7 @@ body {
   font-size: 16px;
   margin: 0;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   min-height: 100vh;
 }
 
